# arkanoid-simulation

./: .gitignore  CMakeLists.txt  README.md  run
include/arkanoid-simulation/: board.hpp  defs.hpp  game_objects.hpp  player.hpp
src/: board.cpp  game_objects.cpp  main.cpp  player.cpp
